src/test/testFiles/invalid/semanticErrors/incompatibleForwardDeclarationParameterCount.manimdsl
fun func1(x: number) {
    let y: number = func2(5);
}

fun func2(): number {
    return 10;
}

func1(5);